--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div id="controls">
-        <button id="modify" disabled>Select</button>
-        <button id="create" disabled>Create</button>
+        <button id="edit" disabled>Edit</button>
+        <button id="pen" disabled>Pen</button>
         <button id="delete" disabled>Delete</button>
       </div>
       <div id="map"></div>
     </div>
-    <script type="module" src="/src/dev.ts"></script>
+    <script type="module" src="/dev.ts"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
