--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="edit" disabled>Edit</button>
         <button id="pen" disabled>Pen</button>
         <button id="delete" disabled>Delete</button>
+        <button id="off" disabled>Off</button>
       </div>
       <div id="map"></div>
     </div>
